--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -1,5 +1,5 @@
 ---
-title: Practical 3 - SQL Aggregate Functions and Nested Subqueries
+title: Practical 3 - SQL Aggregate Functions, Nested Subqueries, Joins and views.
 sidebar:
   nav: pract-en
 aside:
@@ -14,8 +14,9 @@ aside:
 
 #### Before working on the tasks check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
 
+## PART 1
 
-## Task 1: Aggregate Functions
+### Task 1: Aggregate Functions
 
 - ### Average
   Get average flight distance:
@@ -96,7 +97,7 @@ WITH temporaryTable (averageValue) AS (
     WHERE Table.Attr1 > temporaryTable.averageValue;
 ```
 
-## Task 2: Aggregate with Grouping
+### Task 2: Aggregate with Grouping
 
 Find the average ticket fare for each class type:
 
@@ -117,7 +118,7 @@ Find the number of distinct destinations across all flights:
 SELECT COUNT(DISTINCT Destination) AS distinct_destinations
 FROM Flight;
 ```
-## Task 3: Having Clause
+### Task 3: Having Clause
 
 ```javascript
 SELECT Source, COUNT(*) AS NumberOfFlights, AVG(Distance) AS AverageDistance 
@@ -133,7 +134,7 @@ This query:
 4. Uses HAVING clause to only include groups with average distance greater than 2000 miles
 5. Orders the result by descending number of flights
    
-## Task 4: Date and Time Manipulation
+### Task 4: Date and Time Manipulation
 
 Extract the year and month from ticket booking date time:
 
@@ -148,7 +149,7 @@ SELECT Flight_no, Dep_time, Destination,
        Arr_time + INTERVAL '5 hours' AS Arr_time_new
 FROM Flight;
 ```
-## Task 5: Output Redirection
+### Task 5: Output Redirection
 
 1. Create a new table with distinct flight numbers:
 ```javascript
@@ -177,7 +178,7 @@ FROM Ticket
 GROUP BY Flight_no;
 ```
 
-## Task 6: Output Control
+### Task 6: Output Control
 
 1. Limit
 ```javascript
@@ -194,7 +195,7 @@ ON t.Class_id = c.Class_id
 ORDER BY c.Fare DESC
 LIMIT 10;
 ```
-## Task 8: Nested Subqueries
+### Task 8: Nested Subqueries
 
 ### 1. Set Membership
 
@@ -303,7 +304,7 @@ FROM Users;
   SELECT 5 * 5 AS square;
   ```
 
-## Task 9: Window Functions
+### Task 9: Window Functions
 
 Window functions are a powerful feature in SQL that allow you to perform calculations across a set of rows related to the current row.
 These functions operate on a "window" of rows defined by a partition or an entire result set. 
@@ -352,6 +353,318 @@ SELECT
 FROM 
     Flight;
 ```
+
+## PART 2
+
+## Example Database System : Electronic Health System
+
+
+### CREATE Database
+
+```javascript
+CREATE DATABASE EHRDB;
+```
+### LIST Databases
+
+```javascript
+\l
+```
+###  USE Database(Change your database)
+
+```javascript
+\c ehrdb
+```
+### CREATE Table
+```javascript
+CREATE TABLE Patient (
+    PatientID INT PRIMARY KEY,
+    Name VARCHAR(100),
+    DateOfBirth DATE,
+    Gender VARCHAR(10),
+    Address VARCHAR(255),
+    ContactNumber VARCHAR(20),
+    Email VARCHAR(100),
+    BloodType VARCHAR(5),
+    Allergies TEXT,
+    OtherMedicalInfo TEXT
+);
+```
+```javascript
+CREATE TABLE Doctor (
+    DoctorID INT PRIMARY KEY,
+    Name VARCHAR(100),
+    Specialization VARCHAR(100),
+    ContactNumber VARCHAR(20),
+    Email VARCHAR(100)
+);
+```
+```javascript
+CREATE TABLE Appointment (
+    AppointmentID INT PRIMARY KEY,
+    PatientID INT,
+    DoctorID INT,
+    AppointmentDate DATE,
+    AppointmentTime TIME,
+    Purpose VARCHAR(255),
+    FOREIGN KEY (PatientID) REFERENCES Patient(PatientID),
+    FOREIGN KEY (DoctorID) REFERENCES Doctor(DoctorID)
+);
+```
+```javascript
+CREATE TABLE Prescription (
+    PrescriptionID INT PRIMARY KEY,
+    DoctorID INT,
+    PatientID INT,
+    MedicationName VARCHAR(100),
+    Dosage VARCHAR(50),
+    Frequency VARCHAR(50),
+    StartDate DATE,
+    EndDate DATE,
+    FOREIGN KEY (DoctorID) REFERENCES Doctor(DoctorID),
+    FOREIGN KEY (PatientID) REFERENCES Patient(PatientID)
+);
+```
+```javascript
+CREATE TABLE Diagnosis (
+    DiagnosisID INT PRIMARY KEY,
+    DoctorID INT,
+    PatientID INT,
+    DiagnosisDescription TEXT,
+    DiagnosisDate DATE,
+    FOREIGN KEY (DoctorID) REFERENCES Doctor(DoctorID),
+    FOREIGN KEY (PatientID) REFERENCES Patient(PatientID)
+);
+```
+```javascript
+CREATE TABLE MedicalBill (
+    MedicalBillID INT PRIMARY KEY,
+    PatientID INT,
+    InsuranceProvider VARCHAR(100),
+    PolicyNumber VARCHAR(50),
+    CoverageDetails TEXT,
+    FOREIGN KEY (PatientID) REFERENCES Patient(PatientID)
+);
+```
+```javascript
+CREATE TABLE MedicalHistory (
+    PatientID INT PRIMARY KEY,
+    MedicalHistoryDetails TEXT,
+    FOREIGN KEY (PatientID) REFERENCES Patient(PatientID)
+);
+```
+### Insert into Table
+```javascript
+INSERT INTO Patient (PatientID, Name, DateOfBirth, Gender, Address, ContactNumber, Email, BloodType, Allergies, OtherMedicalInfo)
+VALUES
+    (1, 'John Doe', '1990-05-15', 'Male', '123 Main St, Anytown', '123-456-7890', 'john.doe@example.com', 'O+', 'Peanuts', 'None'),
+    (2, 'Jane Smith', '1985-09-20', 'Female', '456 Elm St, Anytown', '987-654-3210', 'jane.smith@example.com', 'AB-', 'None', 'Hypertension'),
+    (3, 'Michael Johnson', '1978-03-10', 'Male', '789 Oak St, Anytown', '555-555-5555', 'michael.johnson@example.com', 'A+', 'Penicillin', 'Asthma'),
+    (4, 'Emily Brown', '1995-12-28', 'Female', '321 Pine St, Anytown', '222-333-4444', 'emily.brown@example.com', 'B-', 'Shellfish', 'None'),
+    (5, 'David Wilson', '1980-07-04', 'Male', '567 Maple St, Anytown', '111-222-3333', 'david.wilson@example.com', 'O-', 'Lactose', 'Diabetes'),
+    (6, 'Sarah Lee', '1992-11-18', 'Female', '654 Cedar St, Anytown', '444-444-4444', 'sarah.lee@example.com', 'AB+', 'Eggs', 'None'),
+    (7, 'Christopher Clark', '1973-06-30', 'Male', '987 Birch St, Anytown', '666-777-8888', 'christopher.clark@example.com', 'A-', 'Dust', 'High blood pressure'),
+    (8, 'Jessica Martinez', '1988-01-25', 'Female', '876 Walnut St, Anytown', '999-999-9999', 'jessica.martinez@example.com', 'B+', 'Mold', 'Anemia'),
+    (9, 'Ryan Taylor', '1970-08-12', 'Male', '543 Hickory St, Anytown', '123-987-6543', 'ryan.taylor@example.com', 'AB-', 'None', 'Arthritis'),
+    (10, 'Amanda Anderson', '1987-04-03', 'Female', '234 Birch St, Anytown', '222-333-4444', 'amanda.anderson@example.com', 'O+', 'Pollen', 'None');
+
+```
+```javascript
+INSERT INTO Doctor (DoctorID, Name, Specialization, ContactNumber, Email)
+VALUES
+    (1, 'Dr. Smith', 'Cardiology', '111-222-3333', 'dr.smith@example.com'),
+    (2, 'Dr. Johnson', 'Pediatrics', '444-555-6666', 'dr.johnson@example.com'),
+    (3, 'Dr. Williams', 'Oncology', '777-888-9999', 'dr.williams@example.com'),
+    (4, 'Dr. Brown', 'Dermatology', '111-222-3333', 'dr.brown@example.com'),
+    (5, 'Dr. Lee', 'Orthopedics', '444-555-6666', 'dr.lee@example.com');
+```
+```javascript
+INSERT INTO Appointment (AppointmentID, PatientID, DoctorID, AppointmentDate, AppointmentTime, Purpose)
+VALUES
+    (1, 1, 1, '2024-03-05', '09:00:00', 'Regular Checkup'),
+    (2, 2, 2, '2024-03-06', '10:30:00', 'Vaccination'),
+    (3, 3, 3, '2024-03-07', '11:00:00', 'Chemotherapy'),
+    (4, 4, 4, '2024-03-08', '14:00:00', 'Skin Examination'),
+    (5, 5, 5, '2024-03-09', '15:30:00', 'Physical Therapy');
+```
+```javascript
+INSERT INTO Prescription (PrescriptionID, DoctorID, PatientID, MedicationName, Dosage, Frequency, StartDate, EndDate)
+VALUES
+    (1, 1, 1, 'Aspirin', '100mg', 'Once daily', '2024-03-05', '2024-03-12'),
+    (2, 2, 2, 'Amoxicillin', '500mg', 'Twice daily', '2024-03-06', '2024-03-13'),
+    (3, 3, 3, 'Tamoxifen', '20mg', 'Once daily', '2024-03-07', '2024-03-14'),
+    (4, 4, 4, 'Hydrocortisone cream', 'Apply as needed', 'As needed', '2024-03-08', '2024-03-15'),
+    (5, 5, 5, 'Ibuprofen', '200mg', 'Three times daily', '2024-03-09', '2024-03-16');
+
+```
+```javascript
+INSERT INTO Diagnosis (DiagnosisID, DoctorID, PatientID, DiagnosisDescription, DiagnosisDate)
+VALUES
+    (1, 1, 1, 'High blood pressure', '2024-03-05'),
+    (2, 2, 2, 'Common cold', '2024-03-06'),
+    (3, 3, 3, 'Breast cancer', '2024-03-07'),
+    (4, 4, 4, 'Eczema', '2024-03-08'),
+    (5, 5, 5, 'Knee injury', '2024-03-09');
+```
+```javascript
+INSERT INTO MedicalHistory (PatientID, MedicalHistoryDetails)
+VALUES
+    (1, 'No significant medical history'),
+    (2, 'History of allergies'),
+    (3, 'Underwent previous surgeries'),
+    (4, 'Family history of skin conditions'),
+    (5, 'Previously diagnosed with diabetes'),
+    (6, 'None'),
+    (7, 'Previous heart condition'),
+    (8, 'Anemia'),
+    (9, 'Arthritis'),
+    (10, 'No significant medical history');
+
+```
+```javascript
+INSERT INTO MedicalBill (MedicalBillID, PatientID, InsuranceProvider, PolicyNumber, CoverageDetails)
+VALUES
+    (1, 1, 'ABC Insurance', '123456', 'In-network coverage'),
+    (2, 2, 'XYZ Insurance', '654321', 'Out-of-network coverage'),
+    (3, 3, 'DEF Insurance', '987654', 'Full coverage'),
+    (4, 4, 'GHI Insurance', '456789', 'Partial coverage'),
+    (5, 5, 'JKL Insurance', '987654', 'In-network coverage'),
+    (6, 6, 'MNO Insurance', '321456', 'Out-of-network coverage'),
+    (7, 7, 'PQR Insurance', '654123', 'Full coverage'),
+    (8, 8, 'STU Insurance', '987321', 'Partial coverage'),
+    (9, 9, 'VWX Insurance', '789654', 'In-network coverage'),
+    (10, 10, 'YZA Insurance', '456987', 'Out-of-network coverage');
+```
+### Task 1: Natural Join
+
+```javascript
+SELECT *
+FROM Patient
+NATURAL JOIN Appointment
+NATURAL JOIN Prescription
+NATURAL JOIN Diagnosis;
+```
+
+### Task 2: Natural Join using 'Join' condition
+```javascript
+SELECT *
+FROM Patient
+JOIN Appointment ON Patient.PatientID = Appointment.PatientID
+JOIN Prescription ON Patient.PatientID = Prescription.PatientID
+JOIN Diagnosis ON Patient.PatientID = Diagnosis.PatientID;
+```
+
+### Task 3: Outer Join
+
+- ### Left Join
+A left outer join returns all records from the left table (the first table specified in the JOIN clause), and the matched records from the right table. If there is no match, NULL values are returned for the columns of the right table.
+
+```javascript
+    SELECT *
+    FROM Patient
+    LEFT JOIN Appointment ON Patient.PatientID = Appointment.PatientID;
+```
+
+- ### Right Join
+ A right outer join returns all records from the right table (the second table specified in the JOIN clause), and the matched records from the left table. If there is no match, NULL values are returned for the columns of the left table.
+
+```javascript
+    SELECT *
+    FROM Appointment
+    RIGHT JOIN Patient ON Patient.PatientID = Appointment.PatientID;
+```
+- ### Full Outer Join
+ A full outer join returns all records when there is a match in either the left or right table. If there is no match, NULL values are returned for the columns of the table that lacks a match.
+```javascript
+    SELECT *
+    FROM Patient
+    FULL OUTER JOIN Appointment ON Patient.PatientID = Appointment.PatientID;
+```
+
+### Task 4: Views
+- ### View Definition
+  Let's create a scenario where we want to create a view that combines information from the Patient and Appointment tables. Suppose we want to create a view that shows patient details along with their upcoming appointments.
+  ```javascript
+    CREATE VIEW DoctorAppointmentsView AS
+    SELECT 
+        P.PatientID,
+        P.Name AS PatientName,
+        P.DateOfBirth,
+        P.Gender,
+        P.Address,
+        P.ContactNumber,
+        P.Email,
+        P.BloodType,
+        P.Allergies,
+        P.OtherMedicalInfo,
+        A.AppointmentID,
+        A.AppointmentDate,
+        A.AppointmentTime,
+        A.Purpose
+    FROM 
+        Patient P
+    JOIN 
+        Appointment A ON P.PatientID = A.PatientID
+    JOIN
+        Doctor D ON A.DoctorID = D.DoctorID
+    WHERE 
+        D.DoctorID = 1;
+  ```
+  After creating this view, you can query it like a regular table to retrieve patient details along with their upcoming appointments:
+
+  ```javscript
+  SELECT * FROM DoctorAppointmentsView;
+  ```
+  Create user doctor
+
+  ```javascript
+  CREATE USER doctor WITH PASSWORD '12345';
+  ```
+
+  Grant Accees to doctor
+
+  ```javascript
+  GRANT SELECT ON DoctorAppointmentsView TO doctor;
+  ```
+  Access DB as 'doctor' user
+
+  ```javascript
+  psql -U doctor -d your_database_name
+  ```
+
+- ### Materialized Views
+  Materialized views are useful when you want to precompute and store the results of a query. This can improve query performance, especially for complex queries that are frequently executed. 
+  
+  Let's consider creating a materialized view for the scenario where we want to show patient details along with their upcoming appointments.
+  ```javascript
+    CREATE MATERIALIZED VIEW PatientAppointmentsMaterializedView AS
+    SELECT 
+        P.PatientID,
+        P.Name AS PatientName,
+        P.DateOfBirth,
+        P.Gender,
+        P.Address,
+        P.ContactNumber,
+        P.Email,
+        P.BloodType,
+        P.Allergies,
+        P.OtherMedicalInfo,
+        A.AppointmentID,
+        A.DoctorID,
+        A.AppointmentDate,
+        A.AppointmentTime,
+        A.Purpose
+    FROM 
+        Patient P
+    LEFT JOIN 
+        Appointment A ON P.PatientID = A.PatientID
+    WHERE 
+        A.AppointmentDate >= CURRENT_DATE();
+  ```
+  Refresh Materialized Views
+  ```javascript
+    REFRESH MATERIALIZED VIEW PatientAppointmentsMaterializedView;
+  ```
+
 # Practical 3 Exercise
 
 ## Entity Relationship Diagram for Banking System
