--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -614,22 +614,10 @@ A left outer join returns all records from the left table (the first table speci
   ```javscript
   SELECT * FROM DoctorAppointmentsView;
   ```
-  Create user doctor
+ #### Views vs Materialized Views
 
-  ```javascript
-  CREATE USER doctor WITH PASSWORD '12345';
-  ```
-
-  Grant Accees to doctor
-
-  ```javascript
-  GRANT SELECT ON DoctorAppointmentsView TO doctor;
-  ```
-  Access DB as 'doctor' user
-
-  ```javascript
-  psql -U doctor -d your_database_name
-  ```
+- A view is a virtual table that fetches data dynamically whenever queried, which can lead to slower performance for complex queries.
+- A materialized view, however, stores query results physically, making retrieval faster but requiring periodic refresh to reflect changes in the underlying data.
 
 - ### Materialized Views
   Materialized views are useful when you want to precompute and store the results of a query. This can improve query performance, especially for complex queries that are frequently executed. 
@@ -663,6 +651,11 @@ A left outer join returns all records from the left table (the first table speci
   Refresh Materialized Views
   ```javascript
     REFRESH MATERIALIZED VIEW PatientAppointmentsMaterializedView;
+  ```
+
+- ### Delete Views
+  ```javascript
+  DROP VIEW DoctorAppointmentsView;
   ```
 
 # Practical 3 Exercise
