--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -195,7 +195,7 @@ ON t.Class_id = c.Class_id
 ORDER BY c.Fare DESC
 LIMIT 10;
 ```
-### Task 8: Nested Subqueries
+### Task 7: Nested Subqueries
 
 ### 1. Set Membership
 
@@ -304,7 +304,7 @@ FROM Users;
   SELECT 5 * 5 AS square;
   ```
 
-### Task 9: Window Functions
+### Task 8: Window Functions
 
 Window functions are a powerful feature in SQL that allow you to perform calculations across a set of rows related to the current row.
 These functions operate on a "window" of rows defined by a partition or an entire result set. 
@@ -660,7 +660,6 @@ A left outer join returns all records from the left table (the first table speci
 
 # Practical 3 Exercise
 
-## Entity Relationship Diagram for Banking System
-<img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/pract1_2.png" alt="Banking System ERD">
+## COMING SOON
 
-## Perform all tasks given in the guided session on the database you created for practical exercise 2.
+
