--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -657,9 +657,119 @@ A left outer join returns all records from the left table (the first table speci
   ```javascript
   DROP VIEW DoctorAppointmentsView;
   ```
+- ### Type Conversion
+  1. Simple CAST - Converting date to text
+```javascript
+    SELECT 
+        PatientID,
+        Name,
+        DateOfBirth,
+        CAST(DateOfBirth AS TEXT) AS DateOfBirthAsText
+    FROM 
+        Patient
+    LIMIT 5;
+```
+
+-- 2. Using :: operator (PostgreSQL's shorthand for CAST)
+```javascript
+SELECT 
+    PatientID,
+    Name,
+    DateOfBirth,
+    DateOfBirth::TEXT AS DateOfBirthAsText
+FROM 
+    Patient
+LIMIT 5;
+```
+- ### Autoincrement
+```javascript
+CREATE TABLE MedicalProcedure (
+    ProcedureID SERIAL PRIMARY KEY,
+    ProcedureName VARCHAR(100) NOT NULL,
+    Description TEXT,
+    Cost DECIMAL(10, 2)
+);
+```
+- ### Large Object Types
+
+PostgreSQL offers several data types designed to store large objects. These types differ in terms of storage methods, size limitations, and use cases:
+
+#### 1. BYTEA
+- **Storage:** Directly in the table
+- **Size Limit:** 1GB (limited by maximum row size)
+- **Use Case:** Binary data that needs to be accessed quickly
+- **Features:** Good for smaller binary objects, supports indexing
+- **Access Method:** Standard SQL
+
+#### 2. TEXT
+- **Storage:** Directly in the table
+- **Size Limit:** 1GB (limited by maximum row size)
+- **Use Case:** Large text data
+- **Features:** Character encoding support, text operations
+- **Access Method:** Standard SQL
+
+#### 3. Large Object (LO)
+- **Storage:** Separate from the table, stored in pg_largeobject table
+- **Size Limit:** 4TB
+- **Use Case:** Very large binary data that exceeds BYTEA limits
+- **Features:** Random access, streaming capabilities
+- **Access Method:** Special API (lo_* functions)
+- **Note:** Requires transaction management and explicit clean-up
+
+#### 4. JSONB
+- **Storage:** Directly in the table
+- **Size Limit:** 1GB (limited by maximum row size)
+- **Use Case:** Large JSON documents
+- **Features:** Binary storage, indexing, JSON operations
+- **Access Method:** JSON operators and functions
+
+#### 5. XML
+- **Storage:** Directly in the table
+- **Size Limit:** 1GB (limited by maximum row size)
+- **Use Case:** XML documents
+- **Features:** XML validation, XPath operations
+- **Access Method:** XML functions
+
+#### Choosing Between Types
+
+- Use **BYTEA** for smaller binary objects (<1MB) that need fast access
+- Use **TEXT** for character data with standard text operations
+- Use **Large Objects** for binary data >1GB or when you need streaming access
+- Use **JSONB** for complex data structures that benefit from JSON operations
+- Use **XML** for data that requires XML-specific operations
+
+
 
 # Practical 3 Exercise
 
-## COMING SOON
+### Task 1: Create the following database
+University Database 
+classroom (building, room_number, capacity) department(dept_name, building, budget) course(course_id, title, dept_name, credits)
+instructor(ID, name, dept_name, salary)
+section(course_id, sec_id, semester, year, building, room number, time slot_id)
+teaches(ID, course_id, sec_id, semester, year)
+student(ID, name, dept_name, tot _cred)
+takes(ID, course_id, sec_id, semester, year, grade)
+advisor(s_ID, i_ID)
+time_slot(time_slot_id, day, start_time, end_time)
+prereq(course_id, prereq_id)
+
+### Task 2: Insert atleast 5 dummy entries into each table
+
+### Task 3: Write SQL queries for the following questions. In your report include the SQL query along with the screenshot of the implementation as the answer to each question.
+- Write a SQL query to find the average salary of all instructors in the university.
+- Calculate the total credits earned by each student. Include the student's ID and name in your result.
+- How many courses are offered by each department? List the department name and the count in descending order.
+- For each building, count the number of classrooms and calculate their total capacity. Display results only for buildings with more than 5 classrooms.
+- Write a query that shows each student's name along with the name of their advisor.
+- List all students who have taken courses taught by instructors from the "Computer Science" department. Include student name, course title, and instructor name.
+- List all instructors along with the courses they teach. Include instructors who don't teach any courses.
+- For each department, rank instructors by salary. Display instructor name, department, salary, and rank.
+- Create a view named InstructorCourseLoad that shows each instructor's name, department, and the number of sections they teach.
+- Write a query using the InstructorCourseLoad view to find instructors teaching more than the average number of sections in their department.
+- Create a materialized view that contains a summary of classroom usage: building, room number, and the number of different courses taught in each room.
+- Using a CTE, find students who are taking courses that have at least 3 levels of prerequisites (prerequisites of prerequisites of prerequisites).
+
+
 
 
