--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -657,6 +657,60 @@ A left outer join returns all records from the left table (the first table speci
   ```javascript
   DROP VIEW DoctorAppointmentsView;
   ```
+### Task 5: Integrity Constraints
+- ### Constraints
+  - Not Null Constraint: The Not Null Constraint ensures that a column cannot contain a NULL value.
+    Suppose you want to ensure that every patient record must have a name associated with it. By adding a Not Null Constraint to the Name column, you prevent any new patient record from being inserted without specifying a name.
+    ```javascript
+    ALTER TABLE Patient ALTER COLUMN Name TYPE VARCHAR(100);
+    ```
+    ```javascript
+    ALTER TABLE Patient ALTER COLUMN Name SET NOT NULL;
+    ```
+  - Unique Constraint: The Unique Constraint ensures that all values in a column are unique.
+    Suppose you want to ensure that each patient's email address is unique. By adding a Unique Constraint to the Email column, you prevent multiple patients from having the same email address.
+    ```javascript
+    ALTER TABLE Patient
+    ADD CONSTRAINT unique_email UNIQUE (Email);
+    ```
+  - Check Clause: The Check Clause enforces a condition on data being entered into a column.
+    Suppose you want to ensure that the date of birth for a patient is not in the future. By adding a Check Constraint to the DateOfBirth column, you enforce this condition.
+    ```javascript
+    ALTER TABLE Patient
+    ADD CONSTRAINT check_age CHECK (DateOfBirth < CURRENT_DATE);
+    ```
+  - Assigning Names to Constraints: Assigning names to constraints helps in identifying them easily and provides meaningful error messages.
+    Suppose you want to give a specific name to a Unique Constraint on the Email column in the Patient table to easily identify it in case of constraint violations.
+    ```javascript
+    ALTER TABLE Patient
+    ADD CONSTRAINT unique_email_patient UNIQUE (Email);
+    ```
+  - Integrity Constraint Violation During a Transaction(OPTIONAL): Handling constraint violations during a transaction by rolling back the changes if any violation occurs.
+
+    Suppose you attempt to insert a new patient record without specifying a name, violating the Not Null Constraint. In such cases, you want to rollback the transaction to maintain data integrity.
+
+    ```javascript
+    START TRANSACTION;
+    ```
+     -- Attempt to insert a new patient record with a NULL Name
+    ```javascript
+    INSERT INTO Patient (PatientID, Name) VALUES (101, NULL);
+    ```
+    -- Check for constraint violations
+    -- If violation occurs, rollback the transaction
+    ```javascript
+    ROLLBACK WORK;
+    ```
+  - Complex Check Conditions and Assertions: Using complex check conditions to enforce more sophisticated data integrity rules.
+
+    Suppose you  want to ensure that the end date of a prescription is always greater than the start date. By adding a Check Constraint with a complex condition to the Prescription table, you enforce this rule.
+
+    ```javascript
+    ALTER TABLE Prescription 
+    ADD CONSTRAINT prescription_date_check 
+    CHECK (EndDate > StartDate);
+    ```
+### Task 6: SQL Data Types and Schemas
 - ### Type Conversion
   1. Simple CAST - Converting date to text
 ```javascript
@@ -681,15 +735,12 @@ FROM
     Patient
 LIMIT 5;
 ```
-- ### Autoincrement
-```javascript
-CREATE TABLE MedicalProcedure (
-    ProcedureID SERIAL PRIMARY KEY,
-    ProcedureName VARCHAR(100) NOT NULL,
-    Description TEXT,
-    Cost DECIMAL(10, 2)
-);
-```
+- ### Default Values
+    ```javascript
+    ALTER TABLE Patient ALTER COLUMN BloodType TYPE VARCHAR(5), 
+    ALTER COLUMN BloodType SET DEFAULT 'Unknown';
+    ```
+
 - ### Large Object Types
 
 PostgreSQL offers several data types designed to store large objects. These types differ in terms of storage methods, size limitations, and use cases:
@@ -738,6 +789,30 @@ PostgreSQL offers several data types designed to store large objects. These type
 - Use **JSONB** for complex data structures that benefit from JSON operations
 - Use **XML** for data that requires XML-specific operations
 
+- ### User defined types
+- Domain
+    ```javascript
+    CREATE DOMAIN BloodTypeDomain CHAR(3)
+    CHECK (VALUE IN ('A+', 'A-', 'B+', 'B-', 'AB+', 'AB-', 'O+', 'O-'));
+    ```
+    ```javascript
+    ALTER TABLE Patient
+    ALTER COLUMN BloodType SET DATA TYPE BloodTypeDomain;
+    ```
+    - Create a domain called BloodTypeDomain using the CREATE DOMAIN statement. The CHAR(3) specifies that the attribute will be a character string of length 3.
+    - Use the CHECK constraint to ensure that the value of the BloodType attribute must be one of the specified blood types.
+    - Then, alter the BloodType column in the Patient table to use the BloodTypeDomain domain, enforcing the constraint on the BloodType attribute.
+
+- Generating Unique Key Values
+    - Autoincrement
+```javascript
+CREATE TABLE MedicalProcedure (
+    ProcedureID SERIAL PRIMARY KEY,
+    ProcedureName VARCHAR(100) NOT NULL,
+    Description TEXT,
+    Cost DECIMAL(10, 2)
+);
+```
 
 
 # Practical 3 Exercise
