--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -644,9 +644,7 @@ A left outer join returns all records from the left table (the first table speci
     FROM 
         Patient P
     LEFT JOIN 
-        Appointment A ON P.PatientID = A.PatientID
-    WHERE 
-        A.AppointmentDate >= CURRENT_DATE();
+        Appointment A ON P.PatientID = A.PatientID;
   ```
   Refresh Materialized Views
   ```javascript
