--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -787,7 +787,7 @@ PostgreSQL offers several data types designed to store large objects. These type
 - Use **JSONB** for complex data structures that benefit from JSON operations
 - Use **XML** for data that requires XML-specific operations
 
-- ### User defined types
+### User defined types
 - Domain
     ```javascript
     CREATE DOMAIN BloodTypeDomain CHAR(3)
