--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -56,7 +56,7 @@ drop index idx_PatientID;
 
 ### Task 2: Granting Privileges
 
-- CREATE USER
+- CREATE USER (inside postgres shell)
 ```javascript
 CREATE USER user1 WITH PASSWORD '12345';
 ```
@@ -64,45 +64,45 @@ Login as user
 ```javascript
 psql -U user1 -d ehrdb
 ```
-- GRANT SELECT PRIVILEGE
+- GRANT SELECT PRIVILEGE(to be granted inside ehrdb by root user)
 ```javascript
 GRANT SELECT ON TABLE Patient TO user1;
 ```
-- GRANT UPDATE PRIVILEGE
+- GRANT UPDATE PRIVILEGE (to be granted inside ehrdb by root user)
 ```javascript
 GRANT UPDATE ON TABLE Appointment TO user1;
 ```
-- GRANT INSERT PRIVILEGE
+- GRANT INSERT PRIVILEGE (to be granted inside ehrdb by root user)
 ```javascript
 GRANT INSERT ON TABLE Prescription TO user1;
 ```
-- GRANT DELETE PRIVILEGE
+- GRANT DELETE PRIVILEGE (to be granted inside ehrdb by root user)
 ```javascript
 GRANT DELETE ON MedicalHistory TO user1;
 ```
-- GRANT ALL PRIVILEGES
+- GRANT ALL PRIVILEGES (to be granted inside ehrdb shell by root user)
 ```javascript
 GRANT ALL PRIVILEGES ON TABLE Diagnosis TO user1;
 ```
-- REVOKE AUTHORISATION/PRIVILEGE
+- REVOKE AUTHORISATION/PRIVILEGE (to be revoked inside ehrdb shell by root user)
 ```javascript
 REVOKE INSERT ON MedicalBill FROM user1;
 ```
-- GRANT ALL PRIVILEGES ON THE DATABASE
+- GRANT ALL PRIVILEGES ON THE DATABASE (to be granted inside postgres shell by root user)
 ```javascript
 GRANT ALL PRIVILEGES ON DATABASE ehrdb TO user1;
 ```
 ## Task 3: Creating Roles
 
-- CREATING ROLE
+- CREATING ROLE (to be granted inside ehrdb shell by root user)
 ```javascript
 CREATE ROLE doctor_role;
 ```
-- GRANTING PRIVILEGES TO ROLES
+- GRANTING PRIVILEGES TO ROLES (to be granted inside ehrdb shell by root user)
 ```javascript
 GRANT SELECT ON TABLE Appointment TO doctor_role;
 ```
-- ACESSING DB THROUGH ROLES
+- ACESSING DB THROUGH ROLES (to be granted inside ehrdb shell by root user)
 ```javascript
 GRANT doctor_role TO user1;
 ```
@@ -137,20 +137,20 @@ LEFT JOIN
 LEFT JOIN 
     Doctor D ON A.DoctorID = D.DoctorID;
 ```
-```javascript
+```javascript (to be granted inside ehrdb shell by root user)
 GRANT SELECT ON DoctorAppointmentsView TO user1;
 ```
 ## Task 5: Authorisation on Schemas
 
-- References privilege that permits a user to declare foreign keys when creating relations.
+- References privilege that permits a user to declare foreign keys when creating relations. (to be granted inside postgres shell by root user)
 ```javascript
 GRANT USAGE ON SCHEMA EHRDB TO user1;
 ```
-## Task 6: Transfer of privileges
+## Task 6: Transfer of privileges (to be granted inside ehrdb shell by root user)
 ```javascript
 GRANT SELECT ON patient TO user1 WITH GRANT OPTION;
 ```
-## Task 7: Revoking of privileges
+## Task 7: Revoking of privileges (to be revoked inside ehrdb shell by root user)
 ```javascript
 REVOKE SELECT ON TABLE Patient FROM user1;
 ```
@@ -162,6 +162,8 @@ REVOKE ALL PRIVILEGES ON ALL TABLES IN SCHEMA EHRDB FROM user1;
 In PostgreSQL, row-level authorization can be implemented using a feature called Row-Level Security (RLS). RLS allows you to control which rows a user can access from a table based on specified security policies. Here's an example of how you can implement row-level authorization using RLS in PostgreSQL:
 
 Example: viewing of medical history of a patient to be permitted by only the doctor with whom the patient has appointment.
+
+(to be granted inside ehrdb shell by user1)
 
 ```javascript
 CREATE ROLE appointment_viewer;
