--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -494,7 +494,6 @@ VALUES
     (3, 3, 3, 'Tamoxifen', '20mg', 'Once daily', '2024-03-07', '2024-03-14'),
     (4, 4, 4, 'Hydrocortisone cream', 'Apply as needed', 'As needed', '2024-03-08', '2024-03-15'),
     (5, 5, 5, 'Ibuprofen', '200mg', 'Three times daily', '2024-03-09', '2024-03-16');
-
 ```
 ```javascript
 INSERT INTO Diagnosis (DiagnosisID, DoctorID, PatientID, DiagnosisDescription, DiagnosisDate)
@@ -846,3 +845,42 @@ prereq(course_id, prereq_id)
 
 
 
+CREATE OR REPLACE PROCEDURE schedule_appointment(
+    p_patient_id INT,
+    p_doctor_id INT,
+    p_appointment_date DATE,
+    p_appointment_time TIME,
+    p_purpose VARCHAR(255)
+)
+LANGUAGE plpgsql
+AS $$
+DECLARE
+    next_appointment_id INT;
+    doctor_availability BOOLEAN;
+BEGIN
+    -- Check if the doctor is available at that time
+    SELECT COUNT(*) = 0 INTO doctor_availability
+    FROM Appointment
+    WHERE DoctorID = p_doctor_id
+      AND AppointmentDate = p_appointment_date
+      AND AppointmentTime = p_appointment_time;
+    
+    -- If doctor is not available, raise an exception
+    IF NOT doctor_availability THEN
+        RAISE EXCEPTION 'Doctor is not available at the requested time';
+    END IF;
+    
+    -- Get next appointment ID
+    SELECT COALESCE(MAX(AppointmentID), 0) + 1 INTO next_appointment_id FROM Appointment;
+    
+    -- Insert the new appointment
+    INSERT INTO Appointment (
+        AppointmentID, PatientID, DoctorID, AppointmentDate, AppointmentTime, Purpose
+    ) VALUES (
+        next_appointment_id, p_patient_id, p_doctor_id, p_appointment_date, p_appointment_time, p_purpose
+    );
+    
+    -- Confirm the appointment was scheduled
+    RAISE NOTICE 'Appointment scheduled successfully. Appointment ID: %', next_appointment_id;
+END;
+$$;
