--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -64,6 +64,15 @@ Login as user
 ```javascript
 psql -U user1 -d ehrdb
 ```
+ADDITIONAL
+- To change user from the database server
+```javascript
+SET  role user1
+```
+-  To see the list of users that exist in the database
+```javascript
+\du
+```
 - GRANT SELECT PRIVILEGE(to be granted inside ehrdb by root user)
 ```javascript
 GRANT SELECT ON TABLE Patient TO user1;
@@ -88,10 +97,29 @@ GRANT ALL PRIVILEGES ON TABLE Diagnosis TO user1;
 ```javascript
 REVOKE INSERT ON MedicalBill FROM user1;
 ```
-- GRANT ALL PRIVILEGES ON THE DATABASE (to be granted inside postgres shell by root user)
+- GRANT ALL PRIVILEGES ON THE DATABASE 
+
+Make sure you're logged in as a superuser (root or a role with sufficient privileges): Make sure you're logged into PostgreSQL as a superuser (such as postgres), since you need sufficient permissions to grant privileges.
+
+Connect to the database: You need to connect to the database first:
+
 ```javascript
-GRANT ALL PRIVILEGES ON DATABASE ehrdb TO user1;
+\c ehrdb
+Granting privileges on the database: You can grant usage on the database like so:
 ```
+```javascript
+GRANT CONNECT ON DATABASE ehrdb TO user1;
+```
+This grants user1 permission to connect to the ehrdb database.
+
+Granting privileges on tables (or schemas): If you want to grant privileges on all tables or objects in the database, you need to grant privileges separately on the tables or schemas. For example:
+
+To grant all privileges on all tables within the schema public to user1, you can use:
+
+```javascript
+GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO user1;
+```
+
 ## Task 3: Creating Roles
 
 - CREATING ROLE (to be granted inside ehrdb shell by root user)
