--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -843,44 +843,6 @@ prereq(course_id, prereq_id)
 - Using a CTE, find students who are taking courses that have at least 3 levels of prerequisites (prerequisites of prerequisites of prerequisites).
 
 
-
-
-CREATE OR REPLACE PROCEDURE schedule_appointment(
-    p_patient_id INT,
-    p_doctor_id INT,
-    p_appointment_date DATE,
-    p_appointment_time TIME,
-    p_purpose VARCHAR(255)
-)
-LANGUAGE plpgsql
-AS $$
-DECLARE
-    next_appointment_id INT;
-    doctor_availability BOOLEAN;
-BEGIN
-    -- Check if the doctor is available at that time
-    SELECT COUNT(*) = 0 INTO doctor_availability
-    FROM Appointment
-    WHERE DoctorID = p_doctor_id
-      AND AppointmentDate = p_appointment_date
-      AND AppointmentTime = p_appointment_time;
-    
-    -- If doctor is not available, raise an exception
-    IF NOT doctor_availability THEN
-        RAISE EXCEPTION 'Doctor is not available at the requested time';
-    END IF;
-    
-    -- Get next appointment ID
-    SELECT COALESCE(MAX(AppointmentID), 0) + 1 INTO next_appointment_id FROM Appointment;
-    
-    -- Insert the new appointment
-    INSERT INTO Appointment (
-        AppointmentID, PatientID, DoctorID, AppointmentDate, AppointmentTime, Purpose
-    ) VALUES (
-        next_appointment_id, p_patient_id, p_doctor_id, p_appointment_date, p_appointment_time, p_purpose
-    );
-    
-    -- Confirm the appointment was scheduled
-    RAISE NOTICE 'Appointment scheduled successfully. Appointment ID: %', next_appointment_id;
-END;
-$$;
+INSERT INTO Prescription (PrescriptionID, DoctorID, PatientID, MedicationName, Dosage, Frequency, StartDate, EndDate)
+VALUES
+    (8, 1, 1, 'Aspirin', '100mg', 'Once daily', '2024-03-05', '2024-03-12'),
