--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -390,3 +390,31 @@ def search():
 if __name__ == '__main__':
     app.run(debug=True)
 ```
+# Practical 2 - Exercise 
+
+Go through Advanced Aggregation Features topic given in the textbook Database Sytems Concepts( Chapter 5 Advanced SQL -  Advanced Aggregate Features Page 219)
+Create notes on 
+- Ranking
+- Windowing
+- Pivoting
+- Rollup 
+- Cube
+  
+For the follwing voter registration system schema perform the following tasks:
+
+voter (voter_ID, first_name, last_name, dob, address, city, state, zip_code, registration_date)
+precinct (precinct_ID, precinct_name, county, state)
+voter_precinct (voter_ID, precinct_ID)
+election (election_ID, election_name, election_date, election_type)
+ballot (ballot_ID, election_ID, precinct_ID)
+voting_record (record_ID, voter_ID, election_ID, voting_date, voting_method)
+political_party (party_ID, party_name)
+party_affiliation (voter_ID, party_ID, affiliation_date)
+polling_location (location_ID, precinct_ID, location_name, address, city, state, zip_code)
+election_official (official_ID, first_name, last_name, position, precinct_ID)
+
+## Task 1: Create a database based on the given schema
+## Task 2: Load dummy data on the database
+## Task 3: Perform at least one example query on the database for each of the above given advanced aggregate features(Ranking, Windoing, Pivoting, Rollup, Cube)
+    - Describe what the purpose of the query is and explain how each query works when using the advanced aggregate features.
+
